src/DiunisioParser.java
// Generated from D:/Documents/2017-1/Lenguajes/DIUNISIO-v2/src\Diunisio.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DiunisioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO=1, ALGORITMO=2, TERMINA=3, ENTONCES=4, O=5, Y=6, IGUAL=7, DIFERENTE=8, 
		MAYOR=9, MENOR=10, MAY_IGUAL=11, MEN_IGUAL=12, SUMA=13, MENOS=14, MULT=15, 
		DIV=16, MOD=17, POTENCIA=18, NO=19, DEF=20, RETORNAR=21, INT=22, FLOAT=23, 
		STRING=24, BOOL=25, MATRIZ=26, VECTOR=27, PCOMA=28, ASIGNAR=29, PAREN_AP=30, 
		PAREN_CI=31, LLAVEIZ=32, LLAVEDE=33, ANGIZ=34, ANGDE=35, COMA=36, DOSPUNTOS=37, 
		VERDADERO=38, FALSO=39, NULO=40, SI=41, SI_NO=42, MIENTRAS=43, SELECCIONAR=44, 
		CASO=45, ROMPER=46, HACER=47, PARA=48, DEFECTO=49, IDENTIFICADOR=50, ENTERO=51, 
		PUBLICO=52, PRIVADO=53, PROTEGIDO=54, ESTATICO=55, FINAL=56, ABSTRACTO=57, 
		REAL=58, COMPLEJO=59, CADENA=60, ESPACIO=61, OTRO=62, NUEVO=63, OBJETOID=64, 
		CLASEID=65, PUNTO=66, ESTO=67, IMPLEMENTA=68, EXTIENDE=69, SUPERCLASE=70, 
		INTERFAZ=71, CLASE=72;
	public static final int
		RULE_algoritmo = 0, RULE_clase_senten = 1, RULE_interfaz_senten = 2, RULE_bloque_interfaz = 3, 
		RULE_bloque_clase = 4, RULE_clase_body = 5, RULE_metodo_vacio = 6, RULE_lista_ids = 7, 
		RULE_exp_simple = 8, RULE_expresion = 9, RULE_variable = 10, RULE_termino = 11, 
		RULE_factor = 12, RULE_lista_parsv = 13, RULE_conjunto = 14, RULE_tipo = 15, 
		RULE_bloque = 16, RULE_asignacion_obj = 17, RULE_sec_pobjeto = 18, RULE_sec_proposiciones = 19, 
		RULE_acceso = 20, RULE_proposicion = 21, RULE_modificador = 22, RULE_metodo = 23, 
		RULE_asignacion_esto = 24, RULE_bloque_constructor = 25, RULE_superclase = 26, 
		RULE_constructor = 27, RULE_objeto = 28, RULE_llamada_metodo = 29, RULE_proposicion_obj = 30, 
		RULE_asignacion = 31, RULE_si_senten = 32, RULE_bloque_condicional = 33, 
		RULE_mientras_senten = 34, RULE_hacer_mientras_senten = 35, RULE_seleccionar_senten = 36, 
		RULE_casos = 37, RULE_para_senten = 38, RULE_fun_senten = 39, RULE_proc_senten = 40, 
		RULE_funcion = 41;
	public static final String[] ruleNames = {
		"algoritmo", "clase_senten", "interfaz_senten", "bloque_interfaz", "bloque_clase", 
		"clase_body", "metodo_vacio", "lista_ids", "exp_simple", "expresion", 
		"variable", "termino", "factor", "lista_parsv", "conjunto", "tipo", "bloque", 
		"asignacion_obj", "sec_pobjeto", "sec_proposiciones", "acceso", "proposicion", 
		"modificador", "metodo", "asignacion_esto", "bloque_constructor", "superclase", 
		"constructor", "objeto", "llamada_metodo", "proposicion_obj", "asignacion", 
		"si_senten", "bloque_condicional", "mientras_senten", "hacer_mientras_senten", 
		"seleccionar_senten", "casos", "para_senten", "fun_senten", "proc_senten", 
		"funcion"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'ALGORITMO'", "'..'", "'entonces'", "'||'", "'&&'", "'=='", 
		"'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'^'", "'!'", "'def'", "'retornar'", "'entero'", "'decimal'", "'cadena'", 
		"'booleano'", "'matriz'", "'vector'", "';'", "'='", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "','", "':'", "'verdadero'", "'falso'", "'nulo'", 
		"'si'", "'si_no'", "'mientras'", "'seleccionar'", "'caso'", "'romper'", 
		"'hacer'", "'para'", "'defecto'", null, null, "'publico'", "'privado'", 
		"'protegido'", "'estatico'", "'final'", "'abstracto'", null, null, null, 
		null, null, "'nuevo'", null, null, "'.'", "'esto'", "'implementa'", "'extiende'", 
		"'superclase'", "'interfaz'", "'clase'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMENTARIO", "ALGORITMO", "TERMINA", "ENTONCES", "O", "Y", "IGUAL", 
		"DIFERENTE", "MAYOR", "MENOR", "MAY_IGUAL", "MEN_IGUAL", "SUMA", "MENOS", 
		"MULT", "DIV", "MOD", "POTENCIA", "NO", "DEF", "RETORNAR", "INT", "FLOAT", 
		"STRING", "BOOL", "MATRIZ", "VECTOR", "PCOMA", "ASIGNAR", "PAREN_AP", 
		"PAREN_CI", "LLAVEIZ", "LLAVEDE", "ANGIZ", "ANGDE", "COMA", "DOSPUNTOS", 
		"VERDADERO", "FALSO", "NULO", "SI", "SI_NO", "MIENTRAS", "SELECCIONAR", 
		"CASO", "ROMPER", "HACER", "PARA", "DEFECTO", "IDENTIFICADOR", "ENTERO", 
		"PUBLICO", "PRIVADO", "PROTEGIDO", "ESTATICO", "FINAL", "ABSTRACTO", "REAL", 
		"COMPLEJO", "CADENA", "ESPACIO", "OTRO", "NUEVO", "OBJETOID", "CLASEID", 
		"PUNTO", "ESTO", "IMPLEMENTA", "EXTIENDE", "SUPERCLASE", "INTERFAZ", "CLASE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Diunisio.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DiunisioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AlgoritmoContext extends ParserRuleContext {
		public TerminalNode ALGORITMO() { return getToken(DiunisioParser.ALGORITMO, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(DiunisioParser.IDENTIFICADOR, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(DiunisioParser.DOSPUNTOS, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode TERMINA() { return getToken(DiunisioParser.TERMINA, 0); }
		public TerminalNode PAREN_AP() { return getToken(DiunisioParser.PAREN_AP, 0); }
		public Lista_idsContext lista_ids() {
			return getRuleContext(Lista_idsContext.class,0);
		}
		public TerminalNode PAREN_CI() { return getToken(DiunisioParser.PAREN_CI, 0); }
		public AlgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterAlgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitAlgoritmo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitAlgoritmo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlgoritmoContext algoritmo() throws RecognitionException {
		AlgoritmoContext _localctx = new AlgoritmoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_algoritmo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ALGORITMO);
			setState(85);
			match(IDENTIFICADOR);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PAREN_AP) {
				{
				setState(86);
				match(PAREN_AP);
				setState(87);
				lista_ids();
				setState(88);
				match(PAREN_CI);
				}
			}

			setState(92);
			match(DOSPUNTOS);
			setState(93);
			bloque();
			setState(94);
			match(TERMINA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Clase_sentenContext extends ParserRuleContext {
		public AccesoContext acceso() {
			return getRuleContext(AccesoContext.class,0);
		}
		public TerminalNode CLASE() { return getToken(DiunisioParser.CLASE, 0); }
		public List<TerminalNode> CLASEID() { return getTokens(DiunisioParser.CLASEID); }
		public TerminalNode CLASEID(int i) {
			return getToken(DiunisioParser.CLASEID, i);
		}
		public Bloque_claseContext bloque_clase() {
			return getRuleContext(Bloque_claseContext.class,0);
		}
		public TerminalNode EXTIENDE() { return getToken(DiunisioParser.EXTIENDE, 0); }
		public TerminalNode IMPLEMENTA() { return getToken(DiunisioParser.IMPLEMENTA, 0); }
		public TerminalNode FINAL() { return getToken(DiunisioParser.FINAL, 0); }
		public TerminalNode ESTATICO() { return getToken(DiunisioParser.ESTATICO, 0); }
		public Clase_sentenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase_senten; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterClase_senten(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitClase_senten(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitClase_senten(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clase_sentenContext clase_senten() throws RecognitionException {
		Clase_sentenContext _localctx = new Clase_sentenContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clase_senten);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			acceso();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESTATICO || _la==FINAL) {
				{
				setState(97);
				_la = _input.LA(1);
				if ( !(_la==ESTATICO || _la==FINAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(100);
			match(CLASE);
			setState(101);
			match(CLASEID);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTIENDE) {
				{
				setState(102);
				match(EXTIENDE);
				setState(103);
				match(CLASEID);
				}
			}

			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTA) {
				{
				setState(106);
				match(IMPLEMENTA);
				setState(107);
				match(CLASEID);
				}
			}

			setState(110);
			bloque_clase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interfaz_sentenContext extends ParserRuleContext {
		public TerminalNode INTERFAZ() { return getToken(DiunisioParser.INTERFAZ, 0); }
		public TerminalNode CLASEID() { return getToken(DiunisioParser.CLASEID, 0); }
		public Bloque_interfazContext bloque_interfaz() {
			return getRuleContext(Bloque_interfazContext.class,0);
		}
		public Interfaz_sentenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaz_senten; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterInterfaz_senten(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitInterfaz_senten(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitInterfaz_senten(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interfaz_sentenContext interfaz_senten() throws RecognitionException {
		Interfaz_sentenContext _localctx = new Interfaz_sentenContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interfaz_senten);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(INTERFAZ);
			setState(113);
			match(CLASEID);
			setState(114);
			bloque_interfaz();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bloque_interfazContext extends ParserRuleContext {
		public TerminalNode LLAVEIZ() { return getToken(DiunisioParser.LLAVEIZ, 0); }
		public TerminalNode LLAVEDE() { return getToken(DiunisioParser.LLAVEDE, 0); }
		public Metodo_vacioContext metodo_vacio() {
			return getRuleContext(Metodo_vacioContext.class,0);
		}
		public Bloque_interfazContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_interfaz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterBloque_interfaz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitBloque_interfaz(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitBloque_interfaz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_interfazContext bloque_interfaz() throws RecognitionException {
		Bloque_interfazContext _localctx = new Bloque_interfazContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloque_interfaz);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(LLAVEIZ);
				setState(117);
				match(LLAVEDE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(LLAVEIZ);
				setState(119);
				metodo_vacio();
				setState(120);
				match(LLAVEDE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bloque_claseContext extends ParserRuleContext {
		public TerminalNode LLAVEIZ() { return getToken(DiunisioParser.LLAVEIZ, 0); }
		public Clase_bodyContext clase_body() {
			return getRuleContext(Clase_bodyContext.class,0);
		}
		public TerminalNode LLAVEDE() { return getToken(DiunisioParser.LLAVEDE, 0); }
		public Bloque_claseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_clase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterBloque_clase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitBloque_clase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitBloque_clase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_claseContext bloque_clase() throws RecognitionException {
		Bloque_claseContext _localctx = new Bloque_claseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloque_clase);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(LLAVEIZ);
				setState(125);
				clase_body();
				setState(126);
				match(LLAVEDE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(LLAVEIZ);
				setState(129);
				match(LLAVEDE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Clase_bodyContext extends ParserRuleContext {
		public ProposicionContext proposicion() {
			return getRuleContext(ProposicionContext.class,0);
		}
		public ObjetoContext objeto() {
			return getRuleContext(ObjetoContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public Asignacion_objContext asignacion_obj() {
			return getRuleContext(Asignacion_objContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public Llamada_metodoContext llamada_metodo() {
			return getRuleContext(Llamada_metodoContext.class,0);
		}
		public Clase_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterClase_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitClase_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitClase_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clase_bodyContext clase_body() throws RecognitionException {
		Clase_bodyContext _localctx = new Clase_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clase_body);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				proposicion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				objeto();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				metodo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				asignacion_obj();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				constructor();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(137);
				llamada_metodo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Metodo_vacioContext extends ParserRuleContext {
		public List<AccesoContext> acceso() {
			return getRuleContexts(AccesoContext.class);
		}
		public AccesoContext acceso(int i) {
			return getRuleContext(AccesoContext.class,i);
		}
		public List<ModificadorContext> modificador() {
			return getRuleContexts(ModificadorContext.class);
		}
		public ModificadorContext modificador(int i) {
			return getRuleContext(ModificadorContext.class,i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(DiunisioParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(DiunisioParser.IDENTIFICADOR, i);
		}
		public List<Lista_parsvContext> lista_parsv() {
			return getRuleContexts(Lista_parsvContext.class);
		}
		public Lista_parsvContext lista_parsv(int i) {
			return getRuleContext(Lista_parsvContext.class,i);
		}
		public List<TerminalNode> PCOMA() { return getTokens(DiunisioParser.PCOMA); }
		public TerminalNode PCOMA(int i) {
			return getToken(DiunisioParser.PCOMA, i);
		}
		public Metodo_vacioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metodo_vacio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).enterMetodo_vacio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiunisioListener ) ((DiunisioListener)listener).exitMetodo_vacio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DiunisioVisitor ) return ((DiunisioVisitor<? extends T>)visitor).visitMetodo_vacio(this);
			else return visitor.visitChildren(this);
		}
	}
